[package]
name = "prisma-rs"
version = "1.1.1"
edition = "2024"
authors = ["SirCesarium"]
description = "A lightweight L4 protocol multiplexer with zero-copy routing."
license = "MIT"
repository = "https://github.com/sircesarium/prisma-rs"
homepage = "https://github.com/sircesarium/prisma-rs"
documentation = "https://docs.rs/prisma-rs"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "prisma"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
