[package]
name = "prisma-rs"
version = "1.1.1"
edition = "2024"
authors = ["SirCesarium"]
description = "A high-performance L4 protocol multiplexer with zero-copy routing."
license = "MIT"
repository = "https://github.com/sircesarium/prisma-rs"
homepage = "https://github.com/sircesarium/prisma-rs"
documentation = "https://docs.rs/prisma-rs"
readme = "README.md"

[dependencies]
# Core dependencies
bytes = "1"
memchr = "2.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Optional dependencies (CLI & Extras)
anyhow = { version = "1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "1.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }

[features]
default = ["cli", "logging"]
cli = [
    "dep:anyhow",
    "dep:clap",
    "dep:colored",
    "dep:serde",
    "dep:toml",
    "dep:tracing",
    "dep:tracing-subscriber",
]
logging = ["dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "prisma"
path = "src/main.rs"
required-features = ["cli", "logging"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.10.0"

[[bench]]
name = "protocol_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
