[package]
name = "refractium"
version = "1.1.0"
edition = "2024"
authors = ["SirCesarium"]
description = "Extensible low-level reverse proxy for port multiplexing and protocol-based routing"
license = "MIT"
repository = "https://github.com/sircesarium/refractium"
homepage = "https://github.com/sircesarium/refractium"
documentation = "https://docs.rs/refractium"
readme = "README.md"

[dependencies]
# Core dependencies
bytes = "1"
memchr = "2.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
dyn-clone = "1.0"

# Optional dependencies (CLI & Extras)
anyhow = { version = "1", optional = true }
clap = { version = "4.6", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
toml = { version = "1.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
notify = { version = "8.0", optional = true }
dashmap = "6.1.0"

[features]
default = ["cli", "logging", "protocols", "watch"]
full = ["cli", "logging", "protocols", "watch", "hooks"]

# Logic groups
cli = [
    "dep:anyhow",
    "dep:clap",
    "dep:colored",
    "dep:toml",
    "dep:tracing",
    "dep:tracing-subscriber",
]
logging = ["dep:tracing", "dep:tracing-subscriber"]
protocols = ["proto-http", "proto-https", "proto-ssh", "proto-dns", "proto-ftp"]
hooks = []
watch = ["dep:notify"]

# Individual protocols
proto-http = []
proto-https = []
proto-ssh = []
proto-dns = []
proto-ftp = []

[[bin]]
name = "refractium"
path = "src/main.rs"
required-features = ["cli", "logging"]

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
rand = "0.10"

[[bench]]
name = "protocol_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
